# WixTemplate

./: CMakeLists.txt  License.txt  README.md
src/: CMakeLists.txt  icon.rc  main.cpp
